Fri Feb 26 14:39:39 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* doc/extension.rdoc, doc/extension.ja.rdoc: add editor local
	  variables, with commenting out by :enddoc: directives which are
	  just ignored unless code object mode.  [Bug #12111]

Fri Feb 26 12:25:56 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* doc/extension.ja.rdoc: removed rendering error caused by editor specific
	  configuration on http://docs.ruby-lang.org/en/trunk/extension_rdoc.html .
	  [Bug #12111][ruby-core:73990]

Fri Feb 26 11:21:41 2016  herwinw  <herwin@quarantainenet.nl>

	* lib/xmlrpc.rb: Removed references to NQXML. It's obsoleted parser.
	  [fix GH-1245][ruby-core:59593][Feature #9371]
	* lib/xmlrpc/config.rb: ditto.
	* lib/xmlrpc/parser.rb: ditto.

Fri Feb 26 11:10:19 2016  Rick Salevsky  <rsalevsky@suse.com>

	* lib/tmpdir.rb: Unify to coding-style for method definition.
	  [fix GH-1252]

Fri Feb 26 11:02:04 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* README.md: update markdown syntax for anchor tag.
	  [fix GH-1265] Patch by @lukBarros

Fri Feb 26 10:52:29 2016  Alex Boyd  <alex@opengroove.org>

	* lib/irb.rb: avoid to needless truncation when using back_trace_limit option.
	  [fix GH-1205][ruby-core:72773][Bug #11969]

Fri Feb 26 08:11:58 2016  Aaron Patterson <tenderlove@ruby-lang.org>

	* gem_prelude.rb: Reduce system calls by activating the `did_you_mean`
	  gem before requiring the gem.  Activating the gem puts the gem on
	  the load path, where simply requiring the file will search every gem
	  that's installed until it can find a gem that contains the
	  `did_you_mean` file.

Thu Feb 25 19:04:13 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb: Adding possibility for debugging output
	  for TitleCase table in casefold.h.
	  (with Kimihito Matsui)

Wed Feb 24 22:31:13 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* include/ruby/oniguruma.h: Rearranging flag assignments and making